@@ -2,6 +2,7 @@ package healthy.lifestyle.backend.mental.repository;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import healthy.lifestyle.backend.config.BeanConfig;
 import healthy.lifestyle.backend.config.ContainerConfig;
@@ -61,33 +62,12 @@ public class MentalRepositoryTest {
         dbUtil.deleteAll();
     }
 
-    static Stream<Arguments> findDefaultOrCustomWithFilter_multipleDefaultFilters() {
-        return Stream.of(
-                // Default, positive
-                Arguments.of(null, null, "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
-                Arguments.of("mental", null, "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
-                Arguments.of(null, "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
-                Arguments.of("mental", "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
-                Arguments.of(null, null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
-                Arguments.of("mental", null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
-                Arguments.of(null, "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
-                Arguments.of("mental", "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
-                Arguments.of(null, null, null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
-                Arguments.of("mental", null, null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
-                Arguments.of(null, "desc", null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
-                Arguments.of("mental", "desc", null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
-
-                // Default, empty
-                Arguments.of("non-existent", null, null, 2, 0, 0, 0, 0, Collections.emptyList()),
-                Arguments.of(null, "non-existent", null, 2, 0, 0, 0, 0, Collections.emptyList()));
-    }
-
     @ParameterizedTest
     @MethodSource("findDefaultOrCustomWithFilter_multipleDefaultFilters")
     void findDefaultOrCustomWithFilterTest_shouldReturnDefaultFilteredMentals(
             String title,
             String description,
-            String typeName,
+            String mentalTypeName,
             int itemsPerPage,
             int currentPageNumber,
             int totalElements,
@@ -122,7 +102,7 @@ public class MentalRepositoryTest {
                 PageRequest.of(currentPageNumber, itemsPerPage, Sort.by(Sort.Direction.fromString(direction), sortBy));
 
         Optional<MentalType> mentalTypeFilter = Stream.of(mentalType1, mentalType2)
-                .filter(type -> type.getName().equals(typeName))
+                .filter(type -> type.getName().equals(mentalTypeName))
                 .findFirst();
 
         // When
@@ -142,27 +122,33 @@ public class MentalRepositoryTest {
                 .isEqualTo(expectedFilteredMentals);
     }
 
-    static Stream<Arguments> findDefaultAndCustomWithFilter_multipleFilters() {
+    static Stream<Arguments> findDefaultOrCustomWithFilter_multipleDefaultFilters() {
         return Stream.of(
-                // Positive
-                Arguments.of(null, null, "MEDITATION", 3, 0, 3, 1, 3, List.of(2L, 4L, 6L)),
-                // Arguments.of(null, null, "AFFIRMATION", 5, 0, 5, 1, 5, List.of(1L, 3L, 5L, 7L, 8L)),
-                // Arguments.of(null, null, null, 8, 0, 8, 1, 8, List.of(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L)),
-                Arguments.of("mental", null, "MEDITATION", 3, 0, 3, 1, 3, List.of(2L, 4L, 6L)),
-                // Arguments.of("mental", null, "AFFIRMATION", 5, 0, 5, 1, 5, List.of(1L, 3L, 5L, 7L, 8L)),
-                // Arguments.of("mental", null, null, 8, 0, 8, 1, 8, List.of( 1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L)),
+                // Default, positive
+                Arguments.of(null, null, "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
+                Arguments.of("mental", null, "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
+                Arguments.of(null, "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
+                Arguments.of("mental", "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(2L, 4L)),
+                Arguments.of(null, null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
+                Arguments.of("mental", null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
+                Arguments.of(null, "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
+                Arguments.of("mental", "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(1L, 3L)),
+                Arguments.of(null, null, null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
+                Arguments.of("mental", null, null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
+                Arguments.of(null, "desc", null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
+                Arguments.of("mental", "desc", null, 4, 0, 4, 1, 4, List.of(1L, 2L, 3L, 4L)),
 
-                // Empty
-                Arguments.of("non-existent", null, "MEDITATION", 2, 0, 0, 0, 0, Collections.emptyList()),
-                Arguments.of(null, "non-existent", "AFFIRMATION", 2, 0, 0, 0, 0, Collections.emptyList()));
+                // Default, empty
+                Arguments.of("non-existent", null, null, 2, 0, 0, 0, 0, Collections.emptyList()),
+                Arguments.of(null, "non-existent", null, 2, 0, 0, 0, 0, Collections.emptyList()));
     }
 
     @ParameterizedTest
-    @MethodSource("findDefaultAndCustomWithFilter_multipleFilters")
-    void findDefaultAndCustomWithFilterTest_shouldReturnFilteredMentals(
+    @MethodSource("findDefaultOrCustomWithFilter_multipleCustomFilters")
+    void findDefaultOrCustomWithFilterTest_shouldReturnCustomFilteredMentals(
             String title,
             String description,
-            String typeName,
+            String mentalTypeName,
             int itemsPerPage,
             int currentPageNumber,
             int totalElements,
@@ -189,14 +175,15 @@ public class MentalRepositoryTest {
 
         Mental customMental1User1 = dbUtil.createCustomMental(5, List.of(defaultHttpRef1), mentalType1, user1);
         Mental customMental2User1 = dbUtil.createCustomMental(6, List.of(defaultHttpRef2), mentalType2, user1);
-        Mental customMental3User1 = dbUtil.createCustomMental(7, List.of(defaultHttpRef3), mentalType1, user1);
-        Mental customMental4User1 =
-                dbUtil.createCustomMental(8, List.of(defaultHttpRef1, defaultHttpRef3), mentalType1, user1);
+        Mental customMental3User1 =
+                dbUtil.createCustomMental(7, List.of(defaultHttpRef1, defaultHttpRef2), mentalType1, user1);
+        Mental customMental4User1 = dbUtil.createCustomMental(8, List.of(defaultHttpRef2), mentalType2, user1);
 
-        Mental customMental1User2 =
-                dbUtil.createCustomMental(9, List.of(defaultHttpRef1, defaultHttpRef2), mentalType2, user2);
-        Mental customMental2User2 =
+        Mental customMental5User2 =
+                dbUtil.createCustomMental(9, List.of(defaultHttpRef1, defaultHttpRef2), mentalType1, user2);
+        Mental customMental6User2 =
                 dbUtil.createCustomMental(10, List.of(defaultHttpRef2, defaultHttpRef3), mentalType2, user2);
+
         List<Mental> expectedFilteredMentals = Stream.of(
                         defaultMental1,
                         defaultMental2,
@@ -206,8 +193,8 @@ public class MentalRepositoryTest {
                         customMental2User1,
                         customMental3User1,
                         customMental4User1,
-                        customMental1User2,
-                        customMental2User2)
+                        customMental5User2,
+                        customMental6User2)
                 .filter(mental ->
                         resultSeeds.stream().anyMatch(seed -> mental.getTitle().contains(String.valueOf(seed))))
                 .toList();
@@ -218,7 +205,110 @@ public class MentalRepositoryTest {
                 PageRequest.of(currentPageNumber, itemsPerPage, Sort.by(Sort.Direction.fromString(direction), sortBy));
 
         Optional<MentalType> mentalTypeFilter = Stream.of(mentalType1, mentalType2)
-                .filter(mentalType -> mentalType.getName().equals(typeName))
+                .filter(type -> type.getName().equals(mentalTypeName))
+                .findFirst();
+
+        // When
+        Page<Mental> mentalPage = mentalRepository.findDefaultOrCustomWithFilter(
+                true, user1.getId(), title, description, mentalTypeFilter.orElse(null), pageable);
+
+        // Then
+        assertEquals(totalElements, mentalPage.getTotalElements());
+        assertEquals(totalPages, mentalPage.getTotalPages());
+        assertEquals(resultSeeds.size(), mentalPage.getContent().size());
+        assertEquals(numberOfElementsCurrentPage, mentalPage.getContent().size());
+        assertEquals(currentPageNumber, mentalPage.getNumber());
+        assertEquals(itemsPerPage, mentalPage.getSize());
+
+        assertThat(mentalPage.getContent())
+                .usingRecursiveFieldByFieldElementComparatorIgnoringFields("user", "httpRefs", "type")
+                .isEqualTo(expectedFilteredMentals);
+    }
+
+    static Stream<Arguments> findDefaultOrCustomWithFilter_multipleCustomFilters() {
+        return Stream.of(
+                // Custom, positive
+                Arguments.of(null, null, "MEDITATION", 2, 0, 2, 1, 2, List.of(6L, 8L)),
+                Arguments.of("mental", null, "MEDITATION", 2, 0, 2, 1, 2, List.of(6L, 8L)),
+                Arguments.of(null, "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(6L, 8L)),
+                Arguments.of("mental", "desc", "MEDITATION", 2, 0, 2, 1, 2, List.of(6L, 8L)),
+                Arguments.of(null, null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(5L, 7L)),
+                Arguments.of("mental", null, "AFFIRMATION", 2, 0, 2, 1, 2, List.of(5L, 7L)),
+                Arguments.of(null, "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(5L, 7L)),
+                Arguments.of("mental", "desc", "AFFIRMATION", 2, 0, 2, 1, 2, List.of(5L, 7L)),
+                Arguments.of(null, null, null, 4, 0, 4, 1, 4, List.of(5L, 6L, 7L, 8L)),
+                Arguments.of("mental", null, null, 4, 0, 4, 1, 4, List.of(5L, 6L, 7L, 8L)),
+                Arguments.of(null, "desc", null, 4, 0, 4, 1, 4, List.of(5L, 6L, 7L, 8L)),
+                Arguments.of("mental", "desc", null, 4, 0, 4, 1, 4, List.of(5L, 6L, 7L, 8L)),
+
+                // Custom, empty
+                Arguments.of("non-existent", null, "MEDITATION", 2, 0, 0, 0, 0, Collections.emptyList()),
+                Arguments.of(null, "non-existent", "AFFIRMATION", 2, 0, 0, 0, 0, Collections.emptyList()));
+    }
+
+    @ParameterizedTest
+    @MethodSource("findDefaultAndCustomWithFilter_multipleFilters")
+    void findDefaultAndCustomWithFilterTest_shouldReturnFilteredMentals(
+            String title,
+            String description,
+            String mentalTypeName,
+            int itemsPerPage,
+            int currentPageNumber,
+            int totalElements,
+            int totalPages,
+            int numberOfElementsCurrentPage,
+            List<Long> resultSeeds) {
+        // Given
+        MentalType mentalType1 = dbUtil.createAffirmationType();
+        MentalType mentalType2 = dbUtil.createMeditationType();
+
+        HttpRef defaultHttpRef1 = dbUtil.createDefaultHttpRef(1);
+        HttpRef defaultHttpRef2 = dbUtil.createDefaultHttpRef(2);
+        HttpRef defaultHttpRef3 = dbUtil.createDefaultHttpRef(3);
+
+        Mental defaultMental1 = dbUtil.createDefaultMental(1, List.of(defaultHttpRef1), mentalType1);
+        Mental defaultMental2 = dbUtil.createDefaultMental(2, List.of(defaultHttpRef2), mentalType2);
+        Mental defaultMental3 = dbUtil.createDefaultMental(3, List.of(defaultHttpRef1), mentalType1);
+        Mental defaultMental4 = dbUtil.createDefaultMental(4, List.of(defaultHttpRef2), mentalType2);
+
+        Role role = dbUtil.createUserRole();
+        Country country = dbUtil.createCountry(1);
+        User user1 = dbUtil.createUser(1, role, country);
+        User user2 = dbUtil.createUser(2, role, country);
+
+        Mental customMental1User1 = dbUtil.createCustomMental(5, List.of(defaultHttpRef1), mentalType1, user1);
+        Mental customMental2User1 = dbUtil.createCustomMental(6, List.of(defaultHttpRef2), mentalType2, user1);
+        Mental customMental3User1 =
+                dbUtil.createCustomMental(7, List.of(defaultHttpRef1, defaultHttpRef2), mentalType1, user1);
+        Mental customMental4User1 = dbUtil.createCustomMental(8, List.of(defaultHttpRef2), mentalType2, user1);
+
+        Mental customMental5User2 =
+                dbUtil.createCustomMental(9, List.of(defaultHttpRef1, defaultHttpRef2), mentalType1, user2);
+        Mental customMental6User2 =
+                dbUtil.createCustomMental(10, List.of(defaultHttpRef2, defaultHttpRef3), mentalType2, user2);
+
+        List<Mental> expectedFilteredMentals = Stream.of(
+                        defaultMental1,
+                        defaultMental2,
+                        defaultMental3,
+                        defaultMental4,
+                        customMental1User1,
+                        customMental2User1,
+                        customMental3User1,
+                        customMental4User1,
+                        customMental5User2,
+                        customMental6User2)
+                .filter(mental -> resultSeeds.stream()
+                        .anyMatch(seed -> mental.getTitle().equals(String.format("Mental %d", seed))))
+                .toList();
+
+        String direction = "ASC";
+        String sortBy = "id";
+        Pageable pageable =
+                PageRequest.of(currentPageNumber, itemsPerPage, Sort.by(Sort.Direction.fromString(direction), sortBy));
+
+        Optional<MentalType> mentalTypeFilter = Stream.of(mentalType1, mentalType2)
+                .filter(type -> type.getName().equals(mentalTypeName))
                 .findFirst();
 
         Page<Mental> mentalPage = mentalRepository.findDefaultAndCustomWithFilter(
@@ -233,45 +323,23 @@ public class MentalRepositoryTest {
         assertEquals(itemsPerPage, mentalPage.getSize());
 
         assertThat(mentalPage.getContent())
-                .usingRecursiveFieldByFieldElementComparatorIgnoringFields("httpRefs", "user", "type")
-                .isEqualTo(expectedFilteredMentals);
-
-        assertThat(mentalPage.getContent())
-                .usingRecursiveComparison()
-                .ignoringFields("user", "httpRefs", "type")
+                .usingRecursiveFieldByFieldElementComparatorIgnoringFields("user", "httpRefs", "type")
                 .isEqualTo(expectedFilteredMentals);
     }
 
-    @Test
-    void findAllDefault_shouldReturnDefaultMentalList() {
-        // Given
-        HttpRef defaultHttpRef1 = dbUtil.createDefaultHttpRef(1);
-        HttpRef defaultHttpRef2 = dbUtil.createDefaultHttpRef(2);
-        MentalType mentalType1 = dbUtil.createAffirmationType();
-        MentalType mentalType2 = dbUtil.createMeditationType();
+    static Stream<Arguments> findDefaultAndCustomWithFilter_multipleFilters() {
+        return Stream.of(
+                // Positive
+                Arguments.of(null, null, "MEDITATION", 4, 0, 4, 1, 4, List.of(2L, 4L, 6L, 8L)),
+                Arguments.of(null, null, "AFFIRMATION", 4, 0, 4, 1, 4, List.of(1L, 3L, 5L, 7L)),
+                Arguments.of(null, null, null, 8, 0, 8, 1, 8, List.of(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L)),
+                Arguments.of("mental", null, "MEDITATION", 4, 0, 4, 1, 4, List.of(2L, 4L, 6L, 8L)),
+                Arguments.of("mental", null, "AFFIRMATION", 4, 0, 4, 1, 4, List.of(1L, 3L, 5L, 7L)),
+                Arguments.of("mental", null, null, 8, 0, 8, 1, 8, List.of(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L)),
 
-        Mental defaultMental1 = dbUtil.createDefaultMental(1, List.of(defaultHttpRef1), mentalType1);
-        Mental defaultMental2 = dbUtil.createDefaultMental(2, List.of(defaultHttpRef2), mentalType2);
-
-        User user = dbUtil.createUser(1);
-        HttpRef customHttpRef1 = dbUtil.createCustomHttpRef(3, user);
-        HttpRef customHttpRef2 = dbUtil.createCustomHttpRef(4, user);
-
-        Mental customMental1 =
-                dbUtil.createCustomMental(3, List.of(defaultHttpRef1, customHttpRef1), mentalType1, user);
-        Mental customMental2 =
-                dbUtil.createCustomMental(4, List.of(defaultHttpRef2, customHttpRef2), mentalType2, user);
-
-        Sort sort = Sort.by(Sort.Direction.ASC, "id");
-
-        // When
-        List<Mental> mentalsActual = mentalRepository.findAllDefault(sort);
-
-        // Then
-        assertEquals(2, mentalsActual.size());
-        assertThat(mentalsActual)
-                .usingRecursiveFieldByFieldElementComparatorIgnoringFields("httpRefs", "users", "type")
-                .isEqualTo(List.of(defaultMental1, defaultMental2));
+                // Empty
+                Arguments.of("non-existent", null, "MEDITATION", 2, 0, 0, 0, 0, Collections.emptyList()),
+                Arguments.of(null, "non-existent", "AFFIRMATION", 2, 0, 0, 0, 0, Collections.emptyList()));
     }
 
     @Test
@@ -309,5 +377,64 @@ public class MentalRepositoryTest {
         assertThat(mentalActual)
                 .usingRecursiveFieldByFieldElementComparatorIgnoringFields("httpRefs", "user", "type")
                 .isEqualTo(List.of(customMental1, customMental2));
+    }
+
+    @Test
+    void findCustomByTitleAndUserIdTest_shouldReturnCustomMental() {
+        // Given
+        MentalType mentalType1 = dbUtil.createAffirmationType();
+        HttpRef defaultHttpRef = dbUtil.createDefaultHttpRef(1);
+        Mental defaultMental1 = dbUtil.createDefaultMental(1, List.of(defaultHttpRef), mentalType1);
+
+        User user = dbUtil.createUser(1);
+
+        HttpRef customHttpRef1 = dbUtil.createCustomHttpRef(2, user);
+        Mental customMental1 = dbUtil.createCustomMental(2, List.of(customHttpRef1), mentalType1, user);
+
+        HttpRef customHttpRef2 = dbUtil.createCustomHttpRef(3, user);
+        Mental customMental2 = dbUtil.createCustomMental(3, List.of(customHttpRef2), mentalType1, user);
+
+        // When
+        List<Mental> actualMental =
+                mentalRepository.findCustomMentalByTitleAndUserId(customMental1.getTitle(), user.getId());
+
+        // Then
+        assertEquals(1, actualMental.size());
+        assertEquals(customMental1.getId(), actualMental.get(0).getId());
+    }
+
+    @Test
+    void findCustomByMentalIdAndUserIdTest_shouldReturnCustomMental() {
+        // Given
+        Role role = dbUtil.createUserRole();
+        Country country = dbUtil.createCountry(1);
+        MentalType mentalType1 = dbUtil.createAffirmationType();
+        HttpRef defaultHttpRef = dbUtil.createDefaultHttpRef(1);
+
+        Mental defaultMental1 = dbUtil.createDefaultMental(1, List.of(defaultHttpRef), mentalType1);
+
+        User user1 = dbUtil.createUser(1, role, country);
+        HttpRef customHttpRef1 = dbUtil.createCustomHttpRef(2, user1);
+        Mental customMental1 = dbUtil.createCustomMental(2, List.of(customHttpRef1), mentalType1, user1);
+
+        HttpRef customHttpRef2 = dbUtil.createCustomHttpRef(3, user1);
+        Mental customMental2 = dbUtil.createCustomMental(3, List.of(customHttpRef2), mentalType1, user1);
+
+        User user2 = dbUtil.createUser(2, role, country);
+        HttpRef customHttpRef3 = dbUtil.createCustomHttpRef(3, user2);
+        Mental customMental3 = dbUtil.createCustomMental(4, List.of(customHttpRef3), mentalType1, user2);
+
+        Sort sort = Sort.by(Sort.Direction.ASC, "id");
+
+        // When
+        Optional<Mental> mentals = mentalRepository.findCustomByMentalIdAndUserId(customMental1.getId(), user1.getId());
+
+        // Then
+        assertTrue(mentals.isPresent());
+        Mental mentalActual = mentals.get();
+        assertThat(mentalActual)
+                .usingRecursiveComparison()
+                .ignoringFields("user", "httpRefs", "type")
+                .isEqualTo(customMental1);
     }
 }
